Current ACA page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
   <title>My Portfolio</title>
 </head>
-  <body> 
+  <body class="mainpage"> 
     <header>
         <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
         <nav>
@@ -19,9 +19,9 @@
     </header>
     <main>
         <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
-        <h1>Ramon Cruz-Hinojosa</h1>
+        <h1 class="nameplate">Ramon Cruz-Hinojosa</h1>
             <h2>Student of Web Development</h2>
-            <button id="portfolio">Portfolio</button>
+            <button id="portfolio"><a href="./portfolio.html">Portfolio</a></button>
         <a class="small-text" href="https://austincodingacademy.com/">© Austin Coding Academy</a>
     </main>
   </body>
