unfinished overlay page and file cleanup

--- a/portfoliopage/portfolio.html
+++ b/portfoliopage/portfolio.html
@@ -4,12 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio page</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./portfolio.css">
 </head>
 <body class="portfolio">
     <header>
         <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
         <nav>
+            <a href="../ACAlanding/index.html">Homepage</a>
           <a href="">Resume</a>
           <a href="">About Me</a>
           <a href="https://medium.com/@bairdwins">My Blog</a>
@@ -21,6 +22,7 @@
             <h1 class="startport">List of things I've made!</h1>
             <ul class="linktitles">
                 <li>Nasa landing page - (Click image to see full page) <a href="https://ramoncruz-hinojosa.github.io/Nasa-Landing/"><img src="./nasapage (2).png" alt="nasa"></a></li>
+                <li>UNFINISHED Overlay playground - (Click image to see full page) <a href="../overlaystuff/overlay.html"><img src="./brokenfishpage.png" alt="overlay"></a></li>
             </ul>
         </main>
     </div>
