--- a/ACAlanding/index.html
+++ b/ACAlanding/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./ACAstyle.css">
   <title>My Portfolio</title>
 </head>
   <body class="mainpage"> 
@@ -21,7 +21,7 @@
         <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
         <h1 class="nameplate">Ramon Cruz-Hinojosa</h1>
             <h2>Student of Web Development</h2>
-            <button id="portfolio"><a href="./portfolio.html">Portfolio</a></button>
+            <button id="portfolio"><a href="../portfoliopage/portfolio.html">Portfolio</a></button>
         <a class="small-text" href="https://austincodingacademy.com/">© Austin Coding Academy</a>
     </main>
   </body>
