fixed pages not being linked right

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <header>
         <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
         <nav>
-            <a href="../index.html">Homepage</a>
+            <a href="./index.html">Homepage</a>
           <a href="">Resume</a>
           <a href="">About Me</a>
           <a href="https://medium.com/@bairdwins">My Blog</a>
@@ -22,7 +22,7 @@
             <h1 class="startport">List of things I've made!</h1>
             <ul class="linktitles">
                 <li>Nasa landing page - (Click image to see full page) <a href="https://ramoncruz-hinojosa.github.io/Nasa-Landing/"><img src="./nasapage (2).png" alt="nasa"></a></li>
-                <li>UNFINISHED Overlay playground - (Click image to see full page) <a href="../overlaystuff/overlay.html"><img src="./brokenfishpage.png" alt="overlay"></a></li>
+                <li>UNFINISHED Overlay playground - (Click image to see full page) <a href="./overlay.html"><img src="./brokenfishpage.png" alt="overlay"></a></li>
             </ul>
         </main>
     </div>
