--- a/overlay.html
+++ b/overlay.html
@@ -10,7 +10,7 @@
     <header>
         <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
         <nav>
-            <a href="../index.html">Homepage</a>
+            <a href="./index.html">Homepage</a>
           <a href="">Resume</a>
           <a href="">About Me</a>
           <a href="https://medium.com/@bairdwins">My Blog</a>
