--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
         <nav>
-          <a href="">Resume</a>
+          <a href="./resume.html">Resume</a>
           <a href="">About Me</a>
           <a href="https://medium.com/@bairdwins">My Blog</a>
           <a href="" class="has-border">Contact Me</a>
