--- a/resume.html
+++ b/resume.html
@@ -21,13 +21,29 @@
             <main>
                 <article id="jhistory">
                     <h2 id="jhistoryh2">Job history</h2>
-                    <p>I worked a lot of places I worked a lot of places I worked a lot of places I worked a lot of places I worked a lot of places I worked a lot of places</p>
+                    <ul id="work">
+                        <li>here</li>
+                        <li>there</li>
+                        <li>everywhere</li>
+                        <li>this</li>
+                        <li>that</li>
+                        <li>those</li>
+                        <li>these</li>
+                    </ul>
                 </article>
-                <article>
-                    <h2>My expertise</h2>
-                    <p>Vibin Vibin Vibin Vibin Vibin Vibin Vibin Vibin </p>
-                    <h2>Education</h2>
-                    <p>Scoo Scoo Scoo Scoo Scoo Scoo Scoo </p>
+                <article id="exp">
+                    <h2 id="expert">My expertise</h2>
+                    <p id="vib">Vibin Vibin Vibin Vibin Vibin Vibin Vibin Vibin
+                    Vibin Vibin Vibin Vibin Vibin Vibin Vibin Vibin
+                    Vibin Vibin Vibin Vibin Vibin Vibin Vibin Vibin
+                    Vibin Vibin Vibin Vibin Vibin Vibin Vibin Vibin</p>
+                    <h2 id="edu">Education</h2>
+                    <p id="scoo">Scoo Scoo Scoo Scoo Scoo Scoo Scoo 
+                        Scoo Scoo Scoo Scoo Scoo Scoo Scoo
+                        Scoo Scoo Scoo Scoo Scoo Scoo Scoo
+                        Scoo Scoo Scoo Scoo Scoo Scoo Scoo
+                        Scoo Scoo Scoo Scoo Scoo Scoo Scoo
+                    </p>
                 </article>
             </main>
         </div>
