started about page

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,8 @@
                 <li>Nasa landing page - (Click image to see full page) <a href="https://ramoncruz-hinojosa.github.io/Nasa-Landing/"><img src="./nasapage (2).png" alt="nasa"></a></li>
                 <li>UNFINISHED Overlay playground - (Click image to see full page) <a href="./overlay.html"><img src="./brokenfishpage.png" alt="overlay"></a></li>
                 <li>Responsive Webpage - (Click image to see full page) <a href="https://ramoncruz-hinojosa.github.io/First-Responsive-Website/"><img src="./Responsivepage.png" alt="Responsive webpage"></a></li>
+                <li>Resume wireframe practice - (Click image to see full page) <a href="./resume.html"> <img src="" alt=""></a></li>
+                <!-- dont forget to link resume page correctly -->
             </ul>
         </main>
     </div>
