main layout almost finished

--- a/about.html
+++ b/about.html
@@ -11,10 +11,13 @@
 </head>
 <body>
     <div class="big-container">
+        <header>
+            <a href="./index.html">Home</a>
+        </header>
         <h1>BIO</h1>
         <article>
             <section>
-                <video src=""></video>
+                <img src="./circuitbackground.jpg" alt="image of circuitboard">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo accusamus quos quibusdam expedita sint quia necessitatibus temporibus. Eius quidem architecto quis. Nihil officia cum, aperiam ea consectetur sed sunt minima.</p>
             </section>
             <section>
