Desktop version of about setup

--- a/about.html
+++ b/about.html
@@ -11,21 +11,38 @@
 </head>
 <body>
     <div class="big-container">
-        <header>
-            <a href="./index.html">Home</a>
-        </header>
-        <h1>BIO</h1>
-        <article>
-            <section>
-                <img src="./circuitbackground.jpg" alt="image of circuitboard">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo accusamus quos quibusdam expedita sint quia necessitatibus temporibus. Eius quidem architecto quis. Nihil officia cum, aperiam ea consectetur sed sunt minima.</p>
-            </section>
-            <section>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut magnam odit cupiditate. Voluptatum, aperiam cumque a voluptates cum assumenda, non ex nihil sint delectus quas eaque laudantium iure molestiae ipsam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ex quas quibusdam possimus voluptatem veritatis sit excepturi iure placeat magnam. Accusamus soluta iste aliquam sit illum ex dolores hic tenetur?</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, asperiores molestias dicta, deserunt eaque inventore perspiciatis facilis, itaque consequuntur debitis quos. Pariatur voluptas perferendis fuga et nemo distinctio voluptatum quas.</p>
-            </section>
-        </article>
+        <div class="big-container-wrapper">
+            <header>
+                <a href="./index.html">Home</a>
+            </header>
+            <h1>BIO</h1>
+            <article>
+                <section>
+                    <img src="./circuitbackground.jpg" alt="image of circuitboard">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo accusamus quos quibusdam expedita sint quia necessitatibus temporibus. Eius quidem architecto quis. Nihil officia cum, aperiam ea consectetur sed sunt minima.</p>
+                </section>
+                <section>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut magnam odit cupiditate. Voluptatum, aperiam cumque a voluptates cum assumenda, non ex nihil sint delectus quas eaque laudantium iure molestiae ipsam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ex quas quibusdam possimus voluptatem veritatis sit excepturi iure placeat magnam. Accusamus soluta iste aliquam sit illum ex dolores hic tenetur?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, asperiores molestias dicta, deserunt eaque inventore perspiciatis facilis, itaque consequuntur debitis quos. Pariatur voluptas perferendis fuga et nemo distinctio voluptatum quas.</p>
+                </section>
+                <section>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut magnam odit cupiditate. Voluptatum, aperiam cumque a voluptates cum assumenda, non ex nihil sint delectus quas eaque laudantium iure molestiae ipsam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ex quas quibusdam possimus voluptatem veritatis sit excepturi iure placeat magnam. Accusamus soluta iste aliquam sit illum ex dolores hic tenetur?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, asperiores molestias dicta, deserunt eaque inventore perspiciatis facilis, itaque consequuntur debitis quos. Pariatur voluptas perferendis fuga et nemo distinctio voluptatum quas.</p>
+                </section>
+                <section>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut magnam odit cupiditate. Voluptatum, aperiam cumque a voluptates cum assumenda, non ex nihil sint delectus quas eaque laudantium iure molestiae ipsam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ex quas quibusdam possimus voluptatem veritatis sit excepturi iure placeat magnam. Accusamus soluta iste aliquam sit illum ex dolores hic tenetur?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, asperiores molestias dicta, deserunt eaque inventore perspiciatis facilis, itaque consequuntur debitis quos. Pariatur voluptas perferendis fuga et nemo distinctio voluptatum quas.</p>
+                </section>
+                <section>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut magnam odit cupiditate. Voluptatum, aperiam cumque a voluptates cum assumenda, non ex nihil sint delectus quas eaque laudantium iure molestiae ipsam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ex quas quibusdam possimus voluptatem veritatis sit excepturi iure placeat magnam. Accusamus soluta iste aliquam sit illum ex dolores hic tenetur?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, asperiores molestias dicta, deserunt eaque inventore perspiciatis facilis, itaque consequuntur debitis quos. Pariatur voluptas perferendis fuga et nemo distinctio voluptatum quas.</p>
+                </section>
+            </article>
+        </div>
     </div>
 </body>
 </html>
