contact page linked

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="https://ramoncruz-hinojosa.github.io/resumepage/">Resume</a>
           <a href="./about.html">About Me</a>
           <a href="https://medium.com/@bairdwins">My Blog</a>
-          <a href="" class="has-border">Contact Me</a>
+          <a href="./contact.html" class="has-border">Contact Me</a>
         </nav>
     </header>
     <main>
