Image Gallery page complete, linked to portfolio page

--- a/image-gallery.html
+++ b/image-gallery.html
@@ -28,36 +28,153 @@
                         <div class="message">Please work</div>
                     </div>
                 </div>
-                <img src="https://images.unsplash.com/photo-1615948911346-64b82b9e6803?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxM3x8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615937722923-67f6deaf2cc9?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615929380854-c39b4ac2cdb5?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615928769128-4290569b6704?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMnx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615941342297-c0817c53507e?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0M3x8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615798520033-376ff8ff3494?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMTV8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615948911346-64b82b9e6803?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxM3x8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Cool rocks</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615937722923-67f6deaf2cc9?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Yum</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615929380854-c39b4ac2cdb5?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Rain on the skreet</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615928769128-4290569b6704?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMnx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Sweater</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615941342297-c0817c53507e?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0M3x8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Don't touch</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615798520033-376ff8ff3494?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMTV8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Big blue</div>
+                    </div>
+                </div>
             </div>
             <div class="image-column">
-                <img src="https://images.unsplash.com/photo-1615915873552-db2cfd5c21fa?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0OXx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615726244940-a923cec9a0f5?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1OXx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615879945870-751e4d99120a?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2M3x8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615836364937-786654db8232?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2OHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615860675858-5d23d52191a1?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw4N3x8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615880627979-be2127849bca?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5Nnx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615915873552-db2cfd5c21fa?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0OXx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Bridge</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615726244940-a923cec9a0f5?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1OXx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Perspective</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615879945870-751e4d99120a?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2M3x8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Tall</div>
+                    </div>
+                </div>
+                <div class="container-animation">
+                    <img src="https://images.unsplash.com/photo-1615836364937-786654db8232?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2OHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615860675858-5d23d52191a1?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw4N3x8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Water</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615880627979-be2127849bca?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5Nnx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Alley</div>
+                    </div>
+                </div>
             </div>
             <div class="image-column">
-                <img src="https://images.unsplash.com/photo-1615827757530-c678311eb32d?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMDJ8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615826324871-a2b88293dde2?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMzl8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615827158210-8d7870ded893?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNjZ8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615835623871-11590e1eab95?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNzh8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615750198206-6e632e147ef9?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOTV8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615549332616-3922167e33f8?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMDd8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615827757530-c678311eb32d?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMDJ8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Green water</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615826324871-a2b88293dde2?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMzl8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Leaf</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615827158210-8d7870ded893?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNjZ8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Red leaf</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615835623871-11590e1eab95?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNzh8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Pokey</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615750198206-6e632e147ef9?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOTV8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Game</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615549332616-3922167e33f8?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMDd8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Low cloud</div>
+                    </div>
+                </div>          
             </div>
             <div class="image-column">
-                <img src="https://images.unsplash.com/photo-1615800792786-6bf3f89fabec?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNDd8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615738178468-9a580affcf6f?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNTh8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615472768508-9db82090f4c6?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNjh8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615631150323-478353eb742b?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMTN8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1610141010590-5d373f827505?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMjh8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
-                <img src="https://images.unsplash.com/photo-1615740093384-41b955504b01?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMzR8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615800792786-6bf3f89fabec?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNDd8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Valley</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615738178468-9a580affcf6f?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNTh8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Stairs</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615472768508-9db82090f4c6?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNjh8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Salty</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615631150323-478353eb742b?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMTN8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Smooth</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1610141010590-5d373f827505?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMjh8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Scary</div>
+                    </div>
+                </div>
+                <div class="container-overlay">
+                    <img src="https://images.unsplash.com/photo-1615740093384-41b955504b01?ixid=MXwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzMzR8fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="circuitboard">
+                    <div class="overlay">
+                        <div class="message">Clay</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
