Fixed nav bar links portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,10 @@
         <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo">
         <nav>
             <a href="./index.html">Homepage</a>
-          <a href="">Resume</a>
-          <a href="">About Me</a>
+          <a href="https://ramoncruz-hinojosa.github.io/resumepage/">Resume</a>
+          <a href="./about.html">About Me</a>
           <a href="https://medium.com/@bairdwins">My Blog</a>
-          <a href="" class="has-border">Contact Me</a>
+          <a href="./contact.html" class="has-border">Contact Me</a>
         </nav>
     </header>
     <div class="portmain">
@@ -24,8 +24,8 @@
                 <li>Nasa landing page - (Click image to see full page) <a href="https://ramoncruz-hinojosa.github.io/Nasa-Landing/"><img src="./nasapage (2).png" alt="nasa webpage"></a></li>
                 <li>UNFINISHED Overlay playground - (Click image to see full page) <a href="./overlay.html"><img src="./brokenfishpage.png" alt="overlay webpage"></a></li>
                 <li>Responsive Webpage - (Click image to see full page) <a href="https://ramoncruz-hinojosa.github.io/First-Responsive-Website/"><img src="./Responsivepage.png" alt="Responsive webpage"></a></li>
-                <li>Resume wireframe practice - (Click image to see full page) <a href="https://ramoncruz-hinojosa.github.io/resumepage/"> <img src="./Resume page.png" alt="Resume webpage"></a></li>
-                <li>Image Gallery - (Click image to see full page) <a href="./image-gallery.html"> <img src="./Image Gallery webpage.png" alt="Image Gallery webpage"></a></li>
+                <li>Resume wireframe practice - (Click image to see full page) <a href="https://ramoncruz-hinojosa.github.io/resumepage/"><img src="./Resume page.png" alt="Resume webpage"></a></li>
+                <li>Image Gallery - (Click image to see full page) <a href="./image-gallery.html"><img src="./Image Gallery webpage.png" alt="Image Gallery webpage"></a></li>
                 <!-- dont forget to link resume page correctly -->
             </ul>
         </main>
